[package]
name = "todo"
version = "0.1.0"
authors = ["tyagi <tyagi@piping.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
colored = "2.0.0"